# mesh

client/: Cargo.toml
client/src/: ping.rs
shared/protos/: message.proto
