[package]
edition = "2021"
name = "mesh"
version = "0.0.1"
authors = []

[[bin]]
name = "mesh"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
boringtun = { git = "https://github.com/cloudflare/boringtun.git" }
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.20", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
bytes = "1.2"
log = "0.4"
env_logger = "0.9"
flexi_logger = { version = "0.23", features = ["async", "use_chrono_for_offset"] }
protobuf = { version = "3.1", features = ["with-bytes"] }
